# indexer-proxy

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy-docker.yml  pr.yml
cli/: Cargo.toml
cli/examples/: consumer.rs
cli/src/: main.rs
consumer-hoster/: Cargo.toml
consumer-proxy/: Cargo.toml
consumer-proxy/src/: cli.rs  main.rs  open.rs  p2p.rs  payg.rs  playground.html  server.rs
examples/: consumer.rs  prepare.rs
examples/contracts/: IndexerRegistry.json  StateChannel.json  testnet.json
indexer-proxy/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
indexer-proxy/examples/contracts/: SQToken.json  Staking.json
indexer-proxy/src/: account.rs  auth.rs  cli.rs  main.rs  p2p.rs  payg.rs  project.rs  prometheus.rs  server.rs
src/: account.rs  auth.rs  cli.rs  constants.rs  eip712.rs  error.rs  key.rs  lib.rs  main.rs  payg.rs  project.rs  prometheus.rs  query.rs  request.rs  server.rs  tools.rs  traits.rs  types.rs
src/p2p/: handler.rs  mod.rs  payg.rs  primitives.rs  server.rs
src/p2p/behaviour/: mod.rs
src/p2p/behaviour/group/: handler.rs  mod.rs  protocol.rs
src/p2p/behaviour/rpc/: codec.rs  handler.rs  mod.rs  protocol.rs
src/p2p/rpc/: helper.rs  http.rs  mod.rs  ws.rs
src/p2p/utils/: http.rs  mod.rs  state_channel.rs
utils/: Cargo.toml
utils/src/: constants.rs  eip712.rs  error.rs  lib.rs  payg.rs  query.rs  request.rs  tools.rs  types.rs
utils/src/p2p/: handler.rs  mod.rs  server.rs
utils/src/p2p/behaviour/group/: mod.rs
utils/src/p2p/behaviour/rpc/: codec.rs  handler.rs  mod.rs  protocol.rs
utils/src/p2p/rpc/: helper.rs  http.rs
