[package]
name = "indexer-proxy"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version = "^0.11", features = ["json", "blocking"] }
graphql_client = { version = "0.10.0", features = ["graphql_query_derive", "reqwest-blocking"] }
serde = { version = "^1.0", features = ["derive"] }
jsonwebtoken = "=7.2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
chrono = "0.4"
serde_json = "^1.0"
serde_with={ version = "^1.1.0", features = ["json"] }
thiserror = "1.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
lazy_static="1.1.1"