[package]
name = "subql-proxy"
version = "0.1.7-1"
edition = "2018"
default-run = "subql-proxy"

[[bin]]
name = "subql-proxy"
path = "src/main.rs"

[dependencies]
reqwest = { version = "^0.11", features = ["json", "blocking"] }
graphql_client = { version = "0.10.0", features = ["graphql_query_derive", "reqwest-blocking"] }
tokio = { version = "1", features = ["full"] }
tungstenite = "*"
url = {version = "2.2.2" }
serde = { version = "^1.0", features = ["derive"] }
serde_with={ version = "^1.1.0", features = ["json"] }
serde_json = "^1.0"
jsonwebtoken = "=7.2"
warp = "0.3"
lazy_static="1.1.1"
chrono = "0.4"
thiserror = "1.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
structopt = "0.3.25"
blake3="1.2.0"
openssl = { version = "0.10", features = ["vendored"] }
web3 = "0.18.0"
hex = "0.4.3"
prometheus = { version = "0.13.0", features = ["push"] }

[profile.release]
lto = true
codegen-units = 1
