[package]
name = "subql-proxy"
version = "0.1.7-2"
edition = "2018"
default-run = "subql-proxy"

[[bin]]
name = "subql-proxy"
path = "src/main.rs"

[[example]]
name = "consumer"
path = "examples/consumer.rs"
required-features = ["p2p"]

[features]
default = ["p2p"]
p2p = ["libp2p"]
consumer = []

[dependencies]
async-trait = "0.1"
bincode = "1.3"
blake3="1.3"
chrono = "0.4"
cuckoofilter = "0.5"
futures = "0.3"
graphql_client = { version = "0.10", features = ["graphql_query_derive", "reqwest-blocking"] }
hex = "0.4"
httparse = "1.6"
instant = "0.1"
jsonwebtoken = "=7.2"
rand_chacha = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
once_cell = "1.12"
openssl = { version = "0.10", features = ["vendored"] }
prometheus = { version = "0.13", features = ["push"] }
secp256k1 = { version = "0.21", features = ["recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with={ version = "1.1", features = ["json"] }
smallvec = "1.8"
structopt = "0.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16"
url = {version = "2.2" }
warp = "0.3"
web3 = "0.18"

[dependencies.libp2p]
version = "0.44"
optional = true
default-features = false
features = ["autonat", "deflate", "dns-tokio", "floodsub", "identify", "kad", "gossipsub", "mdns", "mplex", "noise", "ping", "plaintext", "pnet", "relay", "request-response", "rendezvous", "secp256k1", "serde", "tcp-tokio", "uds", "wasm-ext", "websocket", "yamux"] # TODO cleanup

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
rustyline = "9.1"
