[package]
name = "consumer-proxy"
version = "0.2.0"
edition = "2021"

[features]
default = ["p2p"]
p2p = ["subql-proxy-utils/p2p"]

[dependencies]
async-trait = "0.1"
bs58 = "0.4"
chrono = "0.4"
hex = "0.4"
jsonwebtoken = "=7.2"
once_cell = "1.12"
openssl = { version = "0.10", features = ["vendored"] }
rand_chacha = "0.3"
secp256k1 = { version = "0.21", features = ["recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with={ version = "1.1", features = ["json"] }
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16"
url = {version = "2.2" }
warp = "0.3"
web3 = "0.18"



subql-proxy-utils = { version = "0.2",  path = "../utils" }
